Fixed #7 Shows attendance present and on time in view student Cleaned out layout of view student just a bit

--- a/static_files/css/view_student_style.css
+++ b/static_files/css/view_student_style.css
@@ -92,6 +92,7 @@ h1 {
 
 .sv-main {
 	display: none;
+        padding-left: 16px;
 }
 
 th {
@@ -134,4 +135,9 @@ th {
 
 table {
     border: none;
+}
+
+.spacer {
+    padding-left: 10px;
+    padding-right: 10px;
 }
